Changes AXPosition to include affinity when computing leaf text positions and simplified line boundary calculations

1. When converting text positions, such as those in a text field, to either a tree position or a leaf text position, we should take affinity into consideration. When there are two equivalent resulting positions, one at the start of a child node and one after the previous child node, we should return the former when affinity is downstream and the latter when affinity is upstream.
2. Line breaks are not always used to separate lines in content editables. Modifies logic that detects if we are at the end of a line to ensure that if there is some white space at the end of the line, then we would detect it as a line separator in addition to a line break.
3. Simplifies logic for finding next and previous line boundaries by relying on AtStartOfline and AtEndOfLine methods, thus creating a smaller piece of code that deals with boundary detection.
R=dmazzoni@chromium.org

Bug: 731056
Tested: existing unit tests, manually with Gmail textareas and content editables
Change-Id: Ic936122ef19f66fcb4a1cc88cd001f4376e34346
Reviewed-on: https://chromium-review.googlesource.com/745724
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515748}
Former-commit-id: a020ea5b0fe8649bd5245c25b4702ef8a6c7e883