ui/accessibility/ax_node_position.h
@@ -38,7 +38,7 @@ class AX_EXPORT AXNodePosition : public AXPosition<AXNodePosition, AXNode> {
   void AnchorParent(int* tree_id, int32_t* parent_id) const override;
   AXNode* GetNodeInTree(int tree_id, int32_t node_id) const override;
   int MaxTextOffset() const override;
-  bool IsInLineBreak() const override;
+  bool IsInWhiteSpace() const override;
   std::vector<int32_t> GetWordStartOffsets() const override;
   std::vector<int32_t> GetWordEndOffsets() const override;
   int32_t GetNextOnLineID(int32_t node_id) const override;
